# cpu-image-gen

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
api/: server.py
configs/: color.json  composition.json  config.json  cultural_entities.json  keywords.json  layers.json  lighting.json  model_configs.json  multimodal_configs.json  relationships.json  templates.json  vocabulary.json
docker/: Dockerfile  docker-compose.yml
docs/: api.md  architecture.md  contributing.md  design-brief.md  installation.md  quickstart.md  usage.md
examples/basic/: example_basic.py
src/: __init__.py  prompt_builder.py
src/adapters/: __init__.py  deepseek.py  style_transfer.py  upscaler.py
src/core/: __init__.py  builder.py  parser.py
src/entities/: __init__.py  cultural.py  templates.py
src/utils/: __init__.py  batch.py  color.py  composition.py  config.py  layers.py  lighting.py  logger.py  model_cache.py  optimization.py  relationship.py  suggestion.py  vocabulary.py
tests/: test_basic.py
web/: app.py
web/templates/: index.html
