[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cpu-image-gen"
version = "1.0.0"
description = "A powerful prompt builder for AI image generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CPU Image Gen Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.25.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
deepseek = ["requests>=2.31.0", "openai>=1.0.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0"]

[project.scripts]
cpu-image-gen = "src.prompt_builder:main"

[tool.setuptools.packages.find]
where = ["."]
